[gd_scene load_steps=20 format=2]

[ext_resource path="res://Misc/zh-cn.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Themes/Style/fantasy_forest_hiver.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Mode_Jeu/mode_Jeu_Entrainement.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Mode_Jeu/Score.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Mode_Jeu/Countdown.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MenuPause.tscn" type="PackedScene" id=6]
[ext_resource path="res://Themes/Style/Fantasy/Default/Panel/panel-022.png" type="Texture" id=7]
[ext_resource path="res://Themes/Style/bugtouch_theme.tres" type="Theme" id=8]
[ext_resource path="res://Themes/fonts/Pixelme.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=7]
size = 31
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.501961 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.501961 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 18.4414
margin_right = 20.5929
modulate_color = Color( 0.262745, 0.266667, 0.388235, 1 )

[sub_resource type="DynamicFont" id=11]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 24.3838
margin_right = 15.6056
modulate_color = Color( 0.262745, 0.266667, 0.388235, 1 )

[sub_resource type="DynamicFont" id=13]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 24.3838
margin_right = 15.6056
modulate_color = Color( 0.262745, 0.266667, 0.388235, 1 )

[node name="mode_Jeu_Entrainement" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 1.0
margin_right = 1280.0
margin_bottom = 721.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="LabelTemps" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.0
margin_top = 7.0
margin_right = 98.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "00 : 00"
align = 1
valign = 1

[node name="Score" type="Label" parent="TextureRect"]
margin_left = 6.0
margin_top = 7.0
margin_right = 295.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Score : 0"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="TimerSpawn" type="Timer" parent="."]
autostart = true

[node name="Countdown" type="Timer" parent="."]
one_shot = true
autostart = true
script = ExtResource( 5 )

[node name="EndScreen" type="Control" parent="."]
margin_right = 1281.0
margin_bottom = 720.0

[node name="ScoreLabel" type="Label" parent="EndScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.5
margin_top = 218.0
margin_right = 147.5
margin_bottom = 284.0
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Score : "
align = 1
valign = 1

[node name="Rejouer" type="Button" parent="EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -21.5
margin_right = 124.5
margin_bottom = 31.5
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Rejouer"

[node name="ReturnButton" type="Button" parent="EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 59.0
margin_right = 125.0
margin_bottom = 111.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Menu Princiapal"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="MenuPause" parent="CanvasLayer" instance=ExtResource( 6 )]
mouse_filter = 1

[connection signal="timeout" from="TimerSpawn" to="." method="_on_TimerSpawn_timeout"]
[connection signal="timeout" from="Countdown" to="." method="_on_Countdown_timeout"]
[connection signal="pressed" from="EndScreen/Rejouer" to="." method="_on_Rejouer_pressed"]
[connection signal="pressed" from="EndScreen/ReturnButton" to="." method="_on_ReturnButton_pressed"]
